# GCP

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  GCP_Adaptor.lic  RNOP_V1.4.0_NR_GNB_DX_PM.xls  adapter_cfg.xml  agent.toml  colNameCutConfig.ini  create_tpdtable.txt  global-pkgs.txt  load.toml  mapping_dx.ini  rust方案参考.md  server.toml  source.toml  扫描时间窗需求.md  部署文档.md
.github/workflows/: build-linux.yml
.omo/: boulder.json
.omo/plans/: refactor-modules.md
crates/remote-file-source/: Cargo.toml
crates/remote-file-source/src/: config.rs  ftp.rs  lib.rs  local.rs  remote.rs  sftp.rs  template.rs
docs/: core-agent-smoke.md  core-agent-test-guide.md  frontend-api-docs.md  frontend-dev-guide.md  frontend-stack.md
docs/adr/: 0001-results-grid-uses-data-integrity.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-06-23-dest-table-download-isolation.md  2026-06-23-legacy-non-streaming-cleanup.md  2026-06-23-streaming-dest-table-parallel.md  2026-06-23-streaming-output-optimization.md  2026-07-02-core-agent-collection.md  2026-07-04-auto-dispatch.md  (+12 more)
fixtures/: EastCom_WIRELESS_PM_ENB_EUTRANCELL_V3.3.0_15m_202606151345_202606151400_P002.csv  nrcelldu_sample.csv
pm-admin/: .env  index.html  package-lock.json  package.json  vite.config.ts
pm-admin/src/: App.tsx  index.css  vite-env.d.ts
rules/: TPD_EUTRANCELL_0_Q.json  TPD_EUTR_PRB_Q.json  TPD_NRCELLDU_PRB_Q_5G.json  Tpd_NRCELLCU_q_5g.json  Tpd_NRCELLDU_q_5g.json
src/: config.rs  core_agent_api.rs  crc64.rs  lib.rs  load_config.rs  main.rs  message.rs  parse_job.rs  parser.rs  scan_window.rs  timeutil.rs  tpd.rs  util.rs  writer.rs
src/agent/: mod.rs  result_csv.rs  runner.rs  server.rs  store.rs  tcp.rs
src/core/: agent_id.rs  config_storage.rs  db.rs  grid.rs  mod.rs  server.rs
tools/: export_tpd_rule.py
设计文档/: 数据来源FTP和SFTP初版设计.md  本地文件命令行版本V0.0.1.md  路线图.md  采集平台总体设计方向.md  阶段1冻结记录.md  阶段2远程来源记录.md
(+56 files in other folders)
