[package]
name = "wy-gnb-pm-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
encoding_rs = "0.8"
flate2 = "1.0"
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
walkdir = "2.5"
zip = "2.2"
