[package]
name = "wy-gnb-pm-parser"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/remote-file-source"]
resolver = "2"

[dependencies]
anyhow = "1.0"
ahash = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
encoding_rs = "0.8"
flate2 = "1.0"
indexmap = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
toml = "0.8"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.5"
zip = "2.2"
sha2 = "0.10"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
remote-file-source = { path = "crates/remote-file-source" }

[dev-dependencies]
tower = "0.5"
